fix: refactering image file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>coins新歓2018 | CAMP PAMPHLET</title>
     <style>
         #main-hero {
-            background: url(./images/bg.png) center center;
+            background: url(./images/bg.jpg) center center;
             position: relative;
         }
 
