feat: pタグのmarginを修正

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h3 class="title is-1 has-text-weight-light">新歓合宿とは</h3>
-                    <div class="has-text-weight-light is-size-5">
+                    <div class="content has-text-weight-light is-size-5">
                         <p>
                             coins(=情報科学類)では、4月10日、11日の日程で新歓合宿を行います。
                         </p>
